--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-image: linear-gradient(to bottom, #F0F0F0, #E8E8E8);
+  background-repeat: repeat-x;
+  background-position: center bottom;
+
+  }
